--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "version": "0.1.0",
     "dependencies": {
         "grunt": "~0.4.1",
-        "grunt-docco": "~0.2.0"
+        "grunt-markdown": "~0.2.0"
     }
 }
