--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-    "name": "ezexceed-documentation",
-    "version": "0.1.0",
-    "dependencies": {
-        "grunt": "~0.4.1",
-        "grunt-markdown": "~0.2.0"
-    }
+  "name": "ezexceed-documentation",
+  "version": "0.1.0",
+  "dependencies": {
+    "grunt": "~0.4.1",
+    "grunt-markdown": "~0.2.0",
+    "grunt-contrib-connect": "~0.3.0",
+    "grunt-contrib-watch": "~0.3.1"
+  }
 }
