--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "grunt": "~0.4.1",
     "grunt-markdown": "~0.2.0",
     "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-watch": "~0.3.1"
+    "grunt-contrib-watch": "~0.3.1",
+    "js-beautify": "~1.3.2",
+    "grunt-html-build": "~0.1.5"
   }
 }
