--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "ezexceed-documentation",
   "version": "0.1.0",
-  "dependencies": {
+  "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-markdown": "~0.2.0",
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-watch": "~0.3.1",
     "js-beautify": "~1.3.2",
-    "grunt-html-build": "~0.1.5"
+    "grunt-html-build": "~0.1.5",
+    "underscore": "~1.4.4",
+    "cheerio": "~0.11.0",
+    "eyes": "~0.1.8",
+    "string": "~1.3.1"
   }
 }
