--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-markdown": "~0.2.0",
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-watch": "~0.3.1",
     "js-beautify": "~1.3.2",
