--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "underscore": "~1.4.4",
     "cheerio": "~0.11.0",
     "eyes": "~0.1.8",
-    "string": "~1.3.1"
+    "string": "~1.3.1",
+    "grunt-contrib-clean": "~0.4.1"
   }
 }
